# tcp-visr

./: .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  clippy.toml  deny.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: epic.md  task.md
.github/workflows/: ci.yml
crates/tcp-visr/: Cargo.toml
crates/tcp-visr/src/: main.rs
crates/tcp-visr/tests/: cli.rs  conns.rs  drift.rs  metrics.rs  replay.rs
crates/tcp-visr/tests/fixtures/: metrics_basic.pcap  metrics_ooo.pcap  metrics_retransmit.pcap  metrics_sack.pcap  mid_rst.pcap  mid_stream.pcap  name_resolution.pcap  seq_wrap.pcap  sim_open.pcap  tuple_reuse.pcap
crates/tcp-visr/tests/oracle/: README.md  metrics_basic.metrics.json  metrics_ooo.metrics.json  metrics_retransmit.metrics.json  metrics_sack.metrics.json  seq_wrap.metrics.json
crates/tcp-visr/tests/support/: mod.rs
crates/tcpvisr-core/: Cargo.toml
crates/tcpvisr-core/src/: endpoint.rs  flow.rs  lib.rs  metric.rs  name.rs  segment.rs  seq.rs  time.rs
crates/tcpvisr-engine/: Cargo.toml
crates/tcpvisr-engine/src/: config.rs  conn.rs  lib.rs  metrics.rs  state.rs  timeline.rs  tracker.rs
crates/tcpvisr-enrich/: Cargo.toml
crates/tcpvisr-enrich/src/: lib.rs
crates/tcpvisr-ingest/: Cargo.toml
crates/tcpvisr-ingest/src/: decode.rs  dns.rs  lib.rs  libpcap.rs  link.rs  live.rs  replay.rs
crates/tcpvisr-ingest/tests/: drift.rs  parity.rs  parse.rs
crates/tcpvisr-ingest/tests/fixtures/: ethernet.pcap  ethernet.pcapng  ipv6_ext.pcap  null.pcap  raw_ip.pcap  skip.pcap  sll.pcap  sll2.pcap
crates/tcpvisr-ingest/tests/support/: mod.rs
crates/tcpvisr-tui/: Cargo.toml
crates/tcpvisr-tui/src/: app.rs  detail.rs  inflight.rs  keys.rs  lib.rs  render.rs  rtt.rs  run.rs  service.rs  throughput.rs  transport.rs
docs/adr/: 0000-template.md  0001-packet-derived-unified-model.md  0002-pure-engine-io-boundary.md  0003-libpcap-for-live-capture.md  0004-seekable-timeseries-timeline.md  0005-libpcap-file-faucet-at-m1.md  0006-connection-identity-and-direction.md  0007-metric-derivation-model.md  0008-usable-frame-headers-present.md  0009-tui-master-list-architecture.md  0010-timeline-transport-as-of-t.md  0011-detail-seq-timeline-and-rendering.md  0012-detail-inflight-and-view-switcher.md  0013-detail-rtt.md  0014-detail-throughput-goodput.md  0015-name-resolution.md  0016-live-capture-streaming-timeline.md
docs/design/: tcp-visr-design.md
docs/milestones/m00-repo-setup/: plan.md  spec.md
docs/milestones/m01-replay-parser/: spec.md
docs/milestones/m02-connection-state/: spec.md
docs/milestones/m03-metric-derivation/: spec.md
docs/superpowers/plans/: 2026-06-30-header-only-captures.md  2026-06-30-m1-replay-parser.md  2026-06-30-m2-connection-state.md  2026-06-30-m3-metric-derivation.md  2026-06-30-m4-tui-master-list.md  2026-06-30-m5-timeline-transport.md  2026-06-30-m6-detail-time-sequence.md  2026-06-30-m7-detail-inflight.md  2026-07-01-m10-name-resolution.md  2026-07-01-m11-live-capture.md  2026-07-01-m8-detail-rtt.md  (+1 more)
(+9 files in other folders)
