[package]
name = "tcp-visr"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "tcp-visr"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
clap = { version = "=4.6.1", features = ["derive"] }
tcpvisr-core = { path = "../tcpvisr-core" }
tcpvisr-engine = { path = "../tcpvisr-engine" }
tcpvisr-ingest = { path = "../tcpvisr-ingest" }

[dev-dependencies]
etherparse = "=0.20.2"
